syntax="proto3";

package user.v1;
option go_package="user/v1;userv1";

import "google/protobuf/empty.proto";

service UserService {
    rpc Register(RegisterReq) returns (RegisterResp) {}
    rpc Login(LoginReq) returns (LoginResp) {}
    rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc Update(UpdateUserReq) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteUserReq) returns (google.protobuf.Empty) {}
    rpc Query(QueryUserReq) returns (QueryUserResp) {}
}

message RegisterReq {
    string email = 1;
    string password = 2;
}

message RegisterResp {
    int32 user_id = 1;
}

message LoginReq {
    string email= 1;
    string password = 2;
}

message LoginResp {
    int64 user_id = 1;
    string username = 2;
    string email = 3;
}

message UpdateUserReq {
    int64 user_id = 1;

    optional string username = 2;
    optional string avatar = 3;
    optional string email = 4;
}

message DeleteUserReq {
    int64 user_id = 1;
}

message QueryUserReq {
    int64 user_id = 1;
}

message QueryUserResp {
    User user = 1;
}

message User {
    int64 user_id = 1;
    string email = 2;
    string username = 3;
    string avatar = 4;
}